--- a/index.html
+++ b/index.html
@@ -99,6 +99,42 @@
               </div>
         </section>
     </header>
+    <main>
+      <!----==========categories============----------------->
+      <section>
+        <div class="container text-center my-5">
+          <div class="row g-2">
+
+            <!-- single-category -->
+            
+            <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+              <div class="p-3 border bg-warning rounded d-flex align-items-center justify-content-around">
+                <h1 class=" text-white fw-bold">Watch</h1>
+                <img class=" img-fluid w-25" src="images/categories/watch.png">
+              </div>
+            </div>
+
+            <!-- single-category -->
+
+            <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+              <div class="p-3 border bg-success rounded d-flex align-items-center justify-content-around">
+                <h1 class=" text-white fw-bold">Bag</h1>
+                <img class=" img-fluid w-25" src="images/categories/bag.png">
+              </div>
+            </div>
+
+            <!-- single-category -->
+
+            <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+              <div class="p-3 border bg-primary rounded d-flex align-items-center justify-content-around">
+                <h1 class=" text-white fw-bold">Shoes</h1>
+                <img class=" img-fluid w-25" src="images/categories/shoes.png">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
