--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class=" mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active bg-info rounded p-5">
+                  <div class="carousel-item active panda-bg-info rounded p-5">
                     <div class="row">
                       <div class="col-lg-7 d-flex align-items-center ">
                         <div>
@@ -48,7 +48,7 @@
                           <p>
                           This is the best headphone in the world for people who just want to waste time in front of funky world</p>
                           <h3>$420</h3>
-                          <div class="btn btn-warning">Buy Now</div>
+                          <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                       </div>
                       <div class="col-lg-5">
@@ -56,7 +56,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="carousel-item active bg-info rounded p-5">
+                  <div class="carousel-item active panda-bg-info rounded p-5">
                     <div class="row">
                       <div class="col-lg-7 d-flex align-items-center ">
                         <div>
@@ -64,7 +64,7 @@
                           <p>
                           This is the best headphone in the world for people who just want to waste time in front of funky world</p>
                           <h3>$600</h3>
-                          <div class="btn btn-warning">Buy Now</div>
+                          <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                       </div>
                       <div class="col-lg-5">
@@ -72,14 +72,14 @@
                       </div>
                     </div>
                   </div>
-                  <div class="carousel-item active bg-info rounded p-5">
+                  <div class="carousel-item active panda-bg-info rounded p-5">
                     <div class="row">
                       <div class="col-lg-7 d-flex align-items-center ">
                         <div>
                           <h1>Mega LCD TV For Sports</h1>
                           <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                           <h3>$1200</h3>
-                          <div class="btn btn-warning">Buy Now</div>
+                          <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                       </div>
                       <div class="col-lg-5">
@@ -151,7 +151,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="m-3">
-                <div class="btn btn-warning">Buy Now</div>
+                <div class="btn panda-btn-buy-now">Buy Now</div>
               </div>
             </div>
           </div>
@@ -164,7 +164,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="m-3">
-                <div class="btn btn-warning">Buy Now</div>
+                <div class="btn panda-btn-buy-now">Buy Now</div>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
               <div class="m-3">
-                <div class="btn btn-warning">Buy Now</div>
+                <div class="btn panda-btn-buy-now">Buy Now</div>
               </div>
             </div>
           </div>
@@ -198,7 +198,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="m-3">
-                <div class="btn btn-warning">Buy Now</div>
+                <div class="btn panda-btn-buy-now">Buy Now</div>
               </div>
             </div>
           </div>
@@ -211,7 +211,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="m-3">
-                <div class="btn btn-warning">Buy Now</div>
+                <div class="btn panda-btn-buy-now">Buy Now</div>
               </div>
             </div>
           </div>
@@ -224,7 +224,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
               <div class="m-3">
-                <div class="btn btn-warning">Buy Now</div>
+                <div class="btn panda-btn-buy-now">Buy Now</div>
               </div>
             </div>
           </div>
@@ -233,7 +233,7 @@
 
       <!----------newsletter----------->
 
-      <section style="height:350px ;" class="container d-flex justify-content-center align-items-center rounded bg-info bg-opacity-75 my-5 " id="subscribe">
+      <section style="height:350px ;" class="container d-flex justify-content-center align-items-center rounded panda-bg-info  my-5 " id="subscribe">
         <div>
           <h2>LET'S STAY IN TOUCH</h2>
           <p>Get updates on sales, specials and more </p>
@@ -241,7 +241,7 @@
               <div class="mb-3">
                 <input type="email" class="form-control" placeholder="Enter your email" required >
               </div>
-              <button type="submit" class="btn btn-warning">Submit</button>
+              <button type="submit" class="btn panda-btn-buy-now">Submit</button>
             </form>
         </div>
       </section>
